--- a/test/fixtures/user_tasks.yml
+++ b/test/fixtures/user_tasks.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: user_tasks
+#
+#  id          :integer          not null, primary key
+#  description :string
+#  due         :date
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
